Merge "Some SonarLint tweaks"